crates/rbx-shop/tests/snapshots/codegen_snapshots__nested_no_typescript.snap
---
source: crates/rbx-shop/tests/codegen_snapshots.rs
expression: "generated_folder(CodegenStyle::Nested, false)"
---
======== GameIdsType.luau ========
-- This file is automatically @generated by rbx shop.
-- It is not intended for manual editing.

export type GameIds = {
	passes: {
		BetaPass: number,
		Starter: number,
		legacy_vip: number,
	},
	rewards: {
		Welcome: number,
	},
	shop: {
		items: {
			Coins100: number,
			GiftVIP: number,
		},
		specials: {
			VIP: number,
		},
	},
}

local function gameIds(x: GameIds): GameIds
	return x
end

return {
	gameIds = gameIds,
}

======== init.luau ========
-- This file is automatically @generated by rbx shop.
-- It is not intended for manual editing.

local Types = require(script.GameIdsType)
export type GameIds = Types.GameIds

export type EnvName = "dev" | "prod"

local UNIVERSE_TO_ENV: { [number]: EnvName } = {
	[9876543210] = "dev",
	[9876543211] = "prod",
}

local function exhaustiveMatch(value: never): never
	error(`rbxshop: unhandled env in dispatcher: {value :: any}`)
end

local env: EnvName? = UNIVERSE_TO_ENV[game.GameId]
if not env then
	error(`rbxshop: unknown universe {game.GameId}`)
end

if env == "dev" then
	return require(script.dev)
elseif env == "prod" then
	return require(script.prod)
else
	exhaustiveMatch(env)
	error("luau")
end

======== dev.luau ========
-- This file is automatically @generated by rbx shop for env 'dev'.
-- It is not intended for manual editing.

local Types = require(script.Parent.GameIdsType)

return Types.gameIds({
	passes = {
		BetaPass = 13,
		Starter = 12,
		legacy_vip = 1234567,
	},
	rewards = {
		Welcome = 21,
	},
	shop = {
		items = {
			Coins100 = 31,
			GiftVIP = 32,
		},
		specials = {
			VIP = 11,
		},
	},
})

======== prod.luau ========
-- This file is automatically @generated by rbx shop for env 'prod'.
-- It is not intended for manual editing.
-- Entries with the value 0 are stubs: absent from this env.

local Types = require(script.Parent.GameIdsType)

return Types.gameIds({
	passes = {
		BetaPass = 0,
		Starter = 112,
		legacy_vip = 1234567,
	},
	rewards = {
		Welcome = 121,
	},
	shop = {
		items = {
			Coins100 = 131,
			GiftVIP = 132,
		},
		specials = {
			VIP = 111,
		},
	},
})
